# controller/dto/image.go
@@ -9,22 +9,18 @@ type ImageSearch struct {
 }
 
 type ImageSave struct {
-	Name        string           `json:"name" form:"name"`
-	Url         string           `json:"url" form:"url" `
-	Type        string           `json:"type" form:"type"`
-	CID         uint             `json:"cid" form:"cid"`
-	UID         uint             `json:"uid" form:"uid"`
-	TagsID      []ImagesTagsData `json:"tags_id" form:"tags_id"`
-	IsRecommend uint             `json:"is_recommend" form:"is_recommend"`
-	IsShow      uint8            `json:"is_show" form:"is_show"`
-}
-
-type ImagesTagsData struct {
-	ID uint `json:"id" from:"ID"`
+	Name        string `json:"name" form:"name" binding:"required"`
+	Url         string `json:"url" form:"url"  `
+	Path        string `json:"path" form:"path" binding:"required"`
+	Type        uint8  `json:"type" form:"type" `
+	CID         uint   `json:"cid" form:"cid" binding:"required"`
+	Tags        []uint `json:"tags_id" form:"tags_id"`
+	IsRecommend uint8  `json:"is_recommend" form:"is_recommend"`
+	IsShow      uint8  `json:"is_show" form:"is_show"`
 }
 
 type ImageUpdate struct {
-	ID uint `json:"id" from:"id"`
+	ID uint `json:"id" from:"id" binding:"required "`
 	ImageSave
 }
 
